starter-code/index.css
@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;700;800&family=Barlow:wght@400;500;700;800&family=Bellefair&display=swap");

/* ------------------- */
/* Custom properties   */
/* ------------------- */

:root {
  /* colors */
  --clr-dark: 230 35% 7%;
  --clr-light: 231 77% 90%;
  --clr-white: 0 0% 100%;

  /* font-sizes */
  --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
  --fs-800: 3.5rem;
  --fs-700: 1.875rem;
  --fs-600: 1.125rem;
  --fs-500: 1rem;
  --fs-400: 0.9375rem;
  --fs-300: 0.875rem;
  --fs-200: 0.75rem;

  /* font-families */
  --ff-serif: "Bellefair", serif;
  --ff-sans-cond: "Barlow Condensed", sans-serif;
  --ff-sans-normal: "Barlow", sans-serif;
}

@media (min-width: 35em) {
  :root {
    --fs-800: 5rem;
    --fs-700: 2.5rem;
    --fs-600: 1.5rem;
    --fs-500: 1.25rem;
    --fs-400: 1rem;
  }
}

@media (min-width: 62em) {
  :root {
    /* font-sizes */
    --fs-800: 6.25rem;
    --fs-700: 3.5rem;
    --fs-750: 2.5rem;
    --fs-600: 2rem;
    --fs-500: 1.5rem;
    --fs-400: 1.125rem;
  }
}

/* ------------------- */
/* Reset               */
/* ------------------- */

/* Reset margins */
*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0;
  scroll-behavior: smooth;
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-weight: 400;
}

/* set up the body */
body {
  font-family: var(--ff-sans-normal);
  font-size: var(--fs-400);
  color: hsl(var(--clr-white));
  background: hsl(var(--clr-dark));
  line-height: 1.5;
  width: 100vw;
  min-height: 100vh;
  overflow-x: hidden;
}

/* make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* make form elements easier to work with */
input,
button,
textarea,
select {
  font: inherit;
}

a {
  text-decoration: none;
}

/* remove animations for people who've turned them off */
@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* ------------------- */
/* Utility classes     */
/* ------------------- */

/* general */

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.d-block {
  display: block;
}

@media screen and (min-width: 37.5em) and (max-width: 62em) {
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap; /* added line */
    border: 0;
  }
}

/* .skip-to-content {
    position: absolute;
    z-index: 9999;
    background: hsl( var(--clr-white) );
    color: hsl( var(--clr-dark) ); 
    padding: .5em 1em;
    margin-inline: auto;
    transform: translateY(-100%);
    transition: transform 250ms ease-in;
}

.skip-to-content:focus {
    transform: translateY(0);
} */

/* colors */

.bg-dark {
  background-color: hsl(var(--clr-dark));
}
.bg-accent {
  background-color: hsl(var(--clr-light));
}
.bg-white {
  background-color: hsl(var(--clr-white));
}

.text-dark {
  color: hsl(var(--clr-dark));
}
.text-accent {
  color: hsl(var(--clr-light));
}
.text-white {
  color: hsl(var(--clr-white));
}

/* typography */

.ff-serif {
  font-family: var(--ff-serif);
}
.ff-sans-cond {
  font-family: var(--ff-sans-cond);
}
.ff-sans-normal {
  font-family: var(--ff-sans-normal);
}

.letter-spacing-1 {
  letter-spacing: 4.75px;
}
.letter-spacing-2 {
  letter-spacing: 2.7px;
}
.letter-spacing-3 {
  letter-spacing: 2.35px;
}

.uppercase {
  text-transform: uppercase;
}

.fs-900 {
  font-size: var(--fs-900);
}
.fs-800 {
  font-size: var(--fs-800);
}
.fs-700 {
  font-size: var(--fs-700);
}
.fs-600 {
  font-size: var(--fs-600);
}
.fs-500 {
  font-size: var(--fs-500);
}
.fs-400 {
  font-size: var(--fs-400);
}
.fs-300 {
  font-size: var(--fs-300);
}
.fs-200 {
  font-size: var(--fs-200);
}

.fs-900,
.fs-800,
.fs-700,
.fs-600 {
  line-height: 1.1;
}

.numbered-title {
  font-family: var(--ff-sans-cond);
  font-size: var(--fs-600);
  text-transform: uppercase;
  letter-spacing: 4.72px;
  padding-inline: clamp(2rem, 4vw, 8rem);
  margin: 2rem 0;
  text-align: center;
}

.numbered-title span {
  margin-right: 0.5em;
  font-weight: 700;
  color: hsl(var(--clr-white) / 0.25);
}

@media screen and (min-width: 37.5em) {
  .numbered-title {
    text-align: left;
  }
}

/* ------------------- */
/* Custom classes     */
/* ------------------- */
.nav {
  width: 100%;
  height: 6rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-inline: 1.5rem 0;
}

.logo {
  width: 2.5rem;
  aspect-ratio: 1;
}

.navbar {
  display: block;
}

.navToggle-btn {
  position: absolute;
  top: 0;
  right: 0;
  width: 2rem;
  height: 2rem;
  margin: 2rem 1.5rem;
  background: url("assets/shared/icon-hamburger.svg");
  background-size: cover;
  border: none;
  cursor: pointer;
  z-index: 99;
}

.close-nav {
  background-image: url("assets/shared/icon-close.svg");
}

.navlist {
  position: absolute;
  top: 0;
  right: 0;
  width: 70vw;
  height: 100vh;
  padding: 7rem 2.5rem 0;
  background-color: hsl(var(--clr-white) / 0.05);
  backdrop-filter: blur(1.5em);
  transform: translateX(100%);
  transition: transform 0.5s ease;
  z-index: 9;
}

.showbar {
  transform: translateX(0);
}

.navlist li {
  width: 100%;
  height: 2rem;
  color: hsl(var(--clr-white));
  padding: 0.5rem 0;
  cursor: pointer;
  display: flex;
  align-items: center;
  margin-bottom: 2.5rem;
  border-bottom: 2px solid transparent;
  transition: all 0.3s ease-in-out;
}

.navlist li:hover {
  border-bottom: 2px solid hsl(var(--clr-white) / 0.65);
  padding-left: 1rem;
}

.navlist li[aria-selected="true"] {
  border-bottom: 2px solid hsl(var(--clr-white));
}

.navlist li span {
  font-weight: 700;
  margin-right: 0.5rem;
}
/* ... */

